--- a/Pipfile
+++ b/Pipfile
@@ -6,37 +6,16 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-click = "*"
-python-dotenv = "*"
-cython = "*"
+
 numpy = "*"
 pandas = "*"
 pyarrow = "*"
 scikit-learn = "*"
 jupyter = "*"
-scrapy = "*"
-keras = "*"
-seaborn = "*"
-pydot = "*"
-bokeh = "*"
-statsmodels = "*"
-spacy = "*"
-pillow = "*"
-requests = "*"
-behold = "*"
 altair = "==3.2.0"
 vega = "==2.5.0"
-urllib3 = "*"
-six = "*"
-s3transfer = "*"
-awscli = "*"
-boto3 = "*"
-certifi = "*"
-idna = "*"
-pyyaml = "*"
-docutils = "*"
-jmespath = "*"
-beautifulsoup4 = "*"
+xgboost = "*"
+cloudpickle = "*"
 
 [requires]
 python_version = "3.6"
